--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,9 +25,8 @@ spring.resources.static-locations=classpath:/static/
 #spring.security.user.password = admin
 #spring.seucrity.user.roles = ADMIN
 
-# oracle
+# mybatis
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=springStudy
 spring.datasource.password=Qkdlsdovmf*1
-spring.datasource.mapper-location=classpath:/mapper/
