[ setting ] - dbconfig, layout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,12 +21,12 @@ spring.thymeleaf.suffix=.html
 spring.resources.static-locations=classpath:/static/
 
 # 스프링 시큐리티
-#spring.security.user.name = admin
-#spring.security.user.password = admin
-#spring.seucrity.user.roles = ADMIN
+#spring.security.user-name = admin
+#spring.security.user-password = admin
+#spring.seucrity.user-roles = ADMIN
 
 # mybatis
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=springStudy
-spring.datasource.password=Qkdlsdovmf*1
+spring.datasource.username=fsjedb
+spring.datasource.password=!fsje_1234
