--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,10 @@ dependencies {
 	//bootstrap
 	implementation 'org.webjars:bootstrap:5.3.3'
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
-	
+	//jquery
+	implementation 'org.webjars:jquery:3.5.1'
+	//require
+	runtimeOnly 'org.webjars:requirejs:2.3.6'
 }
 
 tasks.named('test') {
