--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ spring.datasource.password=!fsje_1234
 # 스프링 애플리케이션에서 멀티파트 요청을 지원. 멀티파트 요청은 일반적으로 파일을 업로드하거나 파일 입력이 있는 양식을 제출할 때 사용.
 spring.servlet.multipart.enabled=true
 # 서버에 업로드된 파일이 저장될 위치를 지정
-spring.servlet.multipart.location=C:\\uploadFile
+spring.servlet.multipart.location=\\uploadFile
 # 멀티파트 요청의 최대 크기를 설정합니다. 요청이 이 크기를 초과하면 거부. 여기서는 최대 요청 크기를 30 메가바이트로 설정.
 spring.servlet.multipart.max-request-size=30MB
 # 업로드되는 개별 파일의 최대 크기를 설정합니다. 파일이 이 크기를 초과하면 업로드가 거부. 여기서는 개별 파일의 최대 크기를 10 메가바이트로 설정.
