[ feature_7_01 ][spring security]
- 인터셉터추가, 프로퍼티 추가, security&web config 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,9 @@ spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 # 파일 경로 지정
 uploadPath=C:\\uploadFile
+
+# 인증 제외 패턴
+authExcludePatterns=/login
+
+# 정적리소스 패턴
+staticPatterns=/css/**,/file/**,/font/**,/html/**,/images/**,/js/**,/lib/**,/style/**,/webjars/**,/favicon.ico
