[ feature_7_02 ][spring security]
- security&web config 추가, images로 경로변경, user insert 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,9 @@ spring.thymeleaf.suffix=.html
 spring.resources.static-locations=classpath:/static/
 
 # 스프링 시큐리티
-#spring.security.user-name = admin
-#spring.security.user-password = admin
-#spring.seucrity.user-roles = ADMIN
+spring.security.user.name = admin
+spring.security.user.password = admin
+spring.seucrity.user.roles = ADMIN
 
 # mybatis
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
@@ -47,4 +47,4 @@ uploadPath=C:\\uploadFile
 authExcludePatterns=/login
 
 # 정적리소스 패턴
-staticPatterns=/css/**,/file/**,/font/**,/html/**,/images/**,/js/**,/lib/**,/style/**,/webjars/**,/favicon.ico
+staticPatterns=/css/**,/file/**,/font/**,/html/**,/images/**,/js/**,/lib/**,/style/**,/webjars/**
