[ feature_7_03 ][spring security]
- db base auth login v0.1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,9 @@ spring.thymeleaf.suffix=.html
 spring.resources.static-locations=classpath:/static/
 
 # 스프링 시큐리티
-spring.security.user.name = admin
-spring.security.user.password = admin
-spring.seucrity.user.roles = ADMIN
+#spring.security.user.name = admin
+#spring.security.user.password = admin
+#spring.seucrity.user.roles = ADMIN
 
 # mybatis
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
