[ feature_12_01 ][gmail smtp]
- init

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,14 @@ spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=fsjedb
 spring.datasource.password=!fsje_1234
 
+# java mail
+mail.host=smtp.gmail.com
+mail.port=587
+mail.userName=rlatjsgur100@gmail.com
+mail.password=fsdt jdgk dxib skuh
+mail.defaultEncoding: UTF-8
+
+
 # file
 # 스프링 애플리케이션에서 멀티파트 요청을 지원. 멀티파트 요청은 일반적으로 파일을 업로드하거나 파일 입력이 있는 양식을 제출할 때 사용.
 spring.servlet.multipart.enabled=true
