--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 	implementation 'org.webjars:jquery:3.5.1'
 	//require
 	runtimeOnly 'org.webjars:requirejs:2.3.6'
+	// javamail
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
