--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ mail.host=smtp.gmail.com
 mail.port=587
 mail.userName=rlatjsgur100@gmail.com
 mail.password=fsdt jdgk dxib skuh
-mail.defaultEncoding: UTF-8
+mail.defaultEncoding=UTF-8
 
 
 # file
