--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,22 @@ java {
 	sourceCompatibility = '21'
 }
 
+/*
+Ensure that your compiler is configured to use the '-parameters' flag.
+You may need to update both your build tool settings as well as your IDE.
+*/
+/*
+1. 매개변수 이름 정보의 누락: Spring Boot 6.x에서는 런타임에 클래스의 매개변수 이름 정보를 유지해야 합니다. 이를 위해 컴파일 시 -parameters 플래그가 필요합니다.
+2. 기본 생성자의 누락: Spring은 기본 생성자가 없을 경우 빈을 생성할 때 어려움을 겪을 수 있습니다.
+*/
+/*
+In Eclipse IDE, open Preferences and activate the following checkbox.
+Java → Compiler → Store information about method parameters (usable via reflection)
+*/
+tasks.withType<JavaCompile>() {
+    options.compilerArgs.add("-parameters")
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
